--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
+    <style
   </head>
   <body>
+      <button id="JoinChat">Join Chat</button>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js">     </script>
     <script src="Multiplayer.js"></script>
