--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <form action="/Multiplayer.js" method="get">
+      <input type="submit" id="yea">
+    </form>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="Multiplayer.js"></script>
