--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <form action="return false" method="get">
-      <input type="text" id="yea">
-      <button type="submit">Send Message</button>
-    </form>
+    <div>
+      <input type="text" id="Input">
+      <button type="submit" id="SubmitButton" >Send Message</button>
+    </div>div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="Multiplayer.js"></script>
