adding chat stuff to js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div>
       <input type="text" id="Input">
       <button type="submit" id="SubmitButton" >Send Message</button>
-    </div>div>
+    </div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="Multiplayer.js"></script>
