--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div>
+    <div style="position: fixed, left: 10px, bottom: 100px">
       <input type="text" id="Input">
       <button type="submit" id="SubmitButton" >Send Message</button>
     </div>
