--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div>
-      <input type="text" id="Input" style="position: fixed, left: 10px, bottom: 100px">
-      <button type="submit" id="SubmitButton" style="position: fixed, left: 10px, bottom: 100px">Send Message</button>
+      <input type="text" id="Input" style="position: absolute; left: 10px; bottom: 100px">
+      <button type="submit" id="SubmitButton" style="position: absolute; left: 100px; bottom: 100px">Send Message</button>
     </div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
