room connection input

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div>
+    <div id="chatInput">
       <input type="text" id="Input" style="position: fixed; left: 10px; bottom: 100px">
       <button type="submit" id="SubmitButton" style="position: fixed; left: 170px; bottom: 100px">Send Message</button>
     </div>
     <div id="ChatBox"></div>
+    <div id="RoomRonnector">
+      <input type="text" id="RoomInput" style="position: fixed; right: 10px; bottom: 100px">
+      <button type="submit" id="RoomSubmitButton" style="position: fixed; right: 170px; bottom: 100px">Send Message</button>
+    </div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="Controlls.js"></script>
