--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="Controlls.js"></script>
     <script src="Multiplayer.js"></script>
+    <script src="ImportantValues.js"></script>
   </body>
 </html>
