--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <input type="text" id="RoomInput" style="position: fixed; right: 10px; bottom: 100px">
       <button type="submit" id="RoomSubmitButton" style="position: fixed; right: 170px; bottom: 100px">Send Message</button>
     </div>
+    <div id='lobbies'></div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="Controlls.js"></script>
