setting up game start

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <script src="Controlls.js"></script>
     <script src="Multiplayer.js"></script>
     <script src="ImportantValues.js"></script>
+    <script src="GameEngine.js"></script>
   </body>
 </html>
