--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: fixed; right: 0px; top: 0px; height: 1980px" alt="offuce" draggable='false'>
     <div id="chatInput">
       <input type="text" id="Input" style="position: fixed; left: 10px; bottom: 100px">
       <button type="submit" id="SubmitButton" style="position: fixed; left: 170px; bottom: 100px">Send Message</button>
