--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: fixed; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
-    <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: fixed; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis">
-    <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: fixed; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis">
+    <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: fixed; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
+    <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: fixed; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
     <div id="chatInput">
       <input type="text" id="Input" style="position: fixed; left: 10px; bottom: 100px">
       <button type="submit" id="SubmitButton" style="position: fixed; left: 170px; bottom: 100px">Send Message</button>
