Working on doors

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <input type="text" id="Input" style="position: fixed; left: 10px; bottom: 100px">
       <button type="submit" id="SubmitButton" style="position: fixed; left: 170px; bottom: 100px">Send Message</button>
     </div>
+    <div style="background-color: darkred;">
+      <img src="Assets/LeftDoor.png" style="position: fixed; left: 0px; top: 0px;" draggable="false">
+    </div>
     <div id="ChatBox"></div>
     <div id="RoomRonnector">
       <input type="text" id="RoomInput" style="position: fixed; right: 10px; bottom: 100px">
