right door added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: fixed; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
-    <div id="LeftDoorDiv" style="position: fixed;left: 69px;top: 106px;width: 210px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+    <div id="LeftDoorDiv" style="position: fixed;right: 69px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+    </div>
+    <div id="RightDoorDiv" style="position: fixed;left: 69px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
     </div>
     <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: fixed; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
     <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: fixed; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
