start on camera system

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     </div>
     <div id="RightDoorDiv" style="position: fixed;right: 105px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
     </div>
+    <div id="TriggerBox">
+      <img id="Trigger" style="position: fixed; left: 100px; bottom: 0px; height: 30px" src="Assests/FlipOutTrigger" alt="Trig" draggable='false'>
+    </div>
     <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: fixed; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
     <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: fixed; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
     <div id="chatInput">
