Fix on cam show up

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="RightDoorDiv" style="position: fixed;right: 105px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
     </div>
     <div id="TriggerBox">
-      <img id="Trigger" style="position: fixed; left: 100px; bottom: 0px; height: 30px" src="Assests/FlipOutTrigger.png" alt="Trig" draggable='false'>
+      <img id="Trigger" style="position: fixed; left: 200px; bottom: 0px; width: 750px" src="Assests/FlipOutTrigger.png" alt="Trig" draggable='false' hidden>
     </div>
     <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: fixed; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
     <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: fixed; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
