--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
+    <title>FNaT-4player</title>
+    <link rel="icon" type="image/x-icon" href="Assests/favicon.ico">
   </head>
   <body>
     <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: fixed; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
