--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <link rel="icon" type="image/x-icon" href="Assests/favicon.ico">
   </head>
   <body>
-    <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: fixed; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
-    <div id="LeftDoorDiv" style="position: fixed;left: 69px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+    <div id='CompleteContainer' style="position: fixed; left: 0px; top: 0px; width: 1432px; height: 901px; overflow: hidden">
+      <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: absolute; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
+      <div id="LeftDoorDiv" style="position: absolute;left: 69px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+      </div>
+      <div id="RightDoorDiv" style="position: absolute;right: 105px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+      </div>
+      <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: absolute; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
+      <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: absolute; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
+      <div id="TriggerBox">
+        <img id="Trigger" style="position: absolute; left: 200px; bottom: 0px; width: 950px" src="Assests/FlipOutTrigger.png" alt="Trig" draggable='false' hidden>
+      </div>
+      <div id="chatInput">
+        <input type="text" id="Input" style="position: absolute; left: 10px; bottom: 100px">
+        <button type="submit" id="SubmitButton" style="position: absolute; left: 170px; bottom: 100px">Send Message</button>
+      </div>
+      <div id="ChatBox"></div>
+      <div id="RoomRonnector">
+        <input type="text" id="RoomInput" style="position: absolute; right: 10px; bottom: 100px">
+        <button type="submit" id="RoomSubmitButton" style="position: absolute; right: 170px; bottom: 100px">Send Message</button>
+      </div>
+      <button type='button' id='refreshLobbiesButton' style="position: absolute; left: 80px; top: 100px">refresh lobbies</button>
+      <div id='lobbies'></div>
     </div>
-    <div id="RightDoorDiv" style="position: fixed;right: 105px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
-    </div>
-    <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: fixed; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
-    <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: fixed; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
-    <div id="TriggerBox">
-      <img id="Trigger" style="position: fixed; left: 200px; bottom: 0px; width: 950px" src="Assests/FlipOutTrigger.png" alt="Trig" draggable='false' hidden>
-    </div>
-    <div id="chatInput">
-      <input type="text" id="Input" style="position: fixed; left: 10px; bottom: 100px">
-      <button type="submit" id="SubmitButton" style="position: fixed; left: 170px; bottom: 100px">Send Message</button>
-    </div>
-    <div id="ChatBox"></div>
-    <div id="RoomRonnector">
-      <input type="text" id="RoomInput" style="position: fixed; right: 10px; bottom: 100px">
-      <button type="submit" id="RoomSubmitButton" style="position: fixed; right: 170px; bottom: 100px">Send Message</button>
-    </div>
-    <button type='button' id='refreshLobbiesButton' style="position: fixed; left: 80px; top: 100px">refresh lobbies</button>
-    <div id='lobbies'></div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <script src="LoadValues.js"></script>
