--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       </div>
       <div id="RightDoorDiv" style="position: absolute;right: 105px;top: 106px;width: 1px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
       </div>
+      <div id='CreationalDiv' style="position: absolute;right: 0px;top: 0px;width: px;height: 650px"></div>
       <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: absolute; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
       <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: absolute; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
       <div id="TriggerBox">
