--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <div id='CompleteContainer' style="position: fixed; left: 0px; top: 0px; width: 1432px; height: 801px; overflow: hidden">
       <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: absolute; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
       <div id="LeftDoorDiv" style="position: absolute;left: 69px;top: 106px;width: 210px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+        <img id='LeftDoorTrigger' style='position: absolute; width: 400px' src='Assests/InvisObject.png'>
       </div>
       <div id="RightDoorDiv" style="position: absolute;right: 100px;top: 106px;width: 210px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
+        <img id='RightDoorTrigger' style='position: absolute; width: 400px' src='Assests/InvisObject.png'>
       </div>
       <div id='CreationalDiv' style="position: absolute;right: 3580px;top: 100px;width: px;height: 650px"></div>
       <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: absolute; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
