--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js">    </script>
     <script src="LoadValues.js"></script>
     <script src="Controlls.js"></script>
+    <script src="Presets.js"></script>
     <script src="Multiplayer.js"></script>
     <script src="ImportantValues.js"></script>
     <script src="GameEngine.js"></script>
