--- a/index.html
+++ b/index.html
@@ -8,38 +8,31 @@
   </head>
   <body>
     <div id='CompleteContainer' style="position: fixed; left: 0px; top: 0px; width: 1432px; height: 801px; overflow: hidden">
-      <img id="TheOffice" src="Assests/TemporaryOffice.png" style="position: absolute; right: 0px; top: -1px; height: 791px" alt="offuce" draggable='false' hidden>
-      <div id="LeftDoorDiv" style="position: absolute;left: 61px;top: 106px;width: 221px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
-        <img id='LeftDoorTrigger' style='position: absolute; width: 400px; right: 0px; top: 0px' src='Assests/InvisObject.png'>
-      </div>
-      <div id="RightDoorDiv" style="position: absolute;right: 112px;top: 106px;width: 221px;height: 650px;overflow: hidden;overflow-x: hidden;overflow-y: hidden;" hidden>
-        <img id='RightDoorTrigger' style='position: absolute; width: 400px; left: 0px; top: 0px' src='Assests/InvisObject.png'>
-      </div>
-      <div id='CreationalDiv' style="position: absolute;right: 3580px;top: 100px;width: px;height: 650px"></div>
-      <img id="ivisObeject1" src="Assests/InvisObject.png" style="position: absolute; right: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
-      <img id="ivisObeject2" src="Assests/InvisObject.png" style="position: absolute; left: 0px; top: 0px; height: 790px" alt="offuce" draggable='false' alt="invis" hidden>
-      <div id="TriggerBox">
-        <img id="Trigger" style="position: absolute; left: 200px; bottom: 0px; width: 950px" src="Assests/FlipOutTrigger.png" alt="Trig" draggable='false' hidden>
-      </div>
-      <div id="chatInput">
+      <canvas id='canvas'style="position: fixed; left: 0px; top: 0px;"></canvas>
+      <div id="chatInput" hidden>
         <input type="text" id="Input" style="position: absolute; left: 10px; bottom: 100px">
         <button type="submit" id="SubmitButton" style="position: absolute; left: 170px; bottom: 100px">Send Message</button>
       </div>
       <div id="ChatBox"></div>
-      <div id="RoomRonnector">
+      <div id="RoomRonnector" hidden>
         <input type="text" id="RoomInput" style="position: absolute; right: 10px; bottom: 100px">
         <button type="submit" id="RoomSubmitButton" style="position: absolute; right: 170px; bottom: 100px">Send Message</button>
       </div>
-      <button type='button' id='refreshLobbiesButton' style="position: absolute; left: 80px; top: 100px">refresh lobbies</button>
-      <div id='lobbies'></div>
+      <button type='button' id='refreshLobbiesButton' style="position: absolute; left: 80px; top: 100px" hidden>refresh lobbies</button>
+      <div id='lobbies' hidden></div>
     </div>
+    <p id='Version' style="position: fixed; bottom: 10px; right: 10px;">V.1.0.0</p>
+    <p id='FPS' style="position: fixed; top: 10px; left: 10px;">0 FPS</p>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js">    </script>
+    <script src='common.js'></script>
+    <script src='Audio.js'></script>
     <script src="LoadValues.js"></script>
     <script src="Controlls.js"></script>
     <script src="Presets.js"></script>
-    <script src="Multiplayer.js"></script>
     <script src="ImportantValues.js"></script>
+    <script src="Multiplayer.js"></script>
     <script src="GameEngine.js"></script>
+    <script src="Render.js"></script>
   </body>
 </html>
