--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <div id="ChatBox"></div>
       <div id="RoomRonnector" hidden>
         <input type="text" id="RoomInput" style="position: absolute; right: 10px; bottom: 100px">
-        <button type="submit" id="RoomSubmitButton" style="position: absolute; right: 170px; bottom: 100px">Send Message</button>
+        <button type="submit" id="RoomSubmitButton" style="position: absolute; right: 170px; bottom: 100px">Join Lobby</button>
       </div>
       <button type='button' id='refreshLobbiesButton' style="position: absolute; left: 80px; top: 100px" hidden>refresh lobbies</button>
       <div id='lobbies' hidden></div>
     </div>
-    <p id='Version' style="position: fixed; bottom: 10px; right: 10px;">V.1.0.0</p>
+    <p id='Version' style="position: fixed; bottom: 10px; right: 10px;">V.1.2.0</p>
     <p id='FPS' style="position: fixed; top: 10px; left: 10px;">0 FPS</p>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js">    </script>
